--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -140,24 +140,14 @@ a:visited {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-.all-items-link a {
-  
-  background-color: #f1f1f1;
-  font-size: 15px;
-  font-weight: 600;
-  text-align: center;
-  padding: 8px 19px;
-  color: #012237;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-}
 
 .tooltip-inner {
   -webkit-box-shadow: 5px 8.66px 30px 0px rgba(0, 0, 0, 0.1);
@@ -4701,7 +4691,7 @@ a:visited {
 * 14. blog styles
 */
 .blog-one {
-  padding-top: 120px;
+  padding-top: 0px;
   padding-bottom: 120px;
 }
 .blog-one__single {
@@ -5671,7 +5661,7 @@ a:visited {
 }
 
 .about-two {
-  padding: 120px 0 0 0;
+  padding: 100px 0 0 0;
 }
 .about-two .block-title {
   margin-bottom: 50px;
