--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1751,6 +1751,11 @@ a:visited {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
+.contact-one .label {
+  font-weight: bold;
+}
+
 @media (min-width: 1200px) {
   .contact-one .container {
     max-width: 800px;
@@ -1773,6 +1778,7 @@ a:visited {
   height: 77px;
   padding-left: 40px;
   margin-bottom: 10px;
+  border-radius: 20px;
 }
 .contact-one textarea {
   height: 211px;
