--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4490,8 +4490,8 @@ a:visited {
       -ms-flex-align: center;
           align-items: center;
   padding: 35px 0;
-  padding-right: 70px;
-  padding-left: 30px;
+  /*padding-right: 70px;*/
+  /*padding-left: 30px;*/
   position: relative;
 }
 .site-footer__social::before {
@@ -4501,7 +4501,7 @@ a:visited {
   top: 0;
   width: 100000px;
   height: 100%;
-  background-color: #022c46;
+  /*background-color: #022c46;*/
 }
 .site-footer__social a {
   color: #94a3ac;
