--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3662,7 +3662,7 @@ a:visited {
       -ms-flex-align: center;
           align-items: center;
 }
-.course-details__curriculum-list-left a {
+.course-details__curriculum-list-left a, div {
   font-size: 16px;
   font-weight: 600;
   color: #012237;
