--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,7 +35,7 @@
 */
 body {
   font-family: "Poppins";
-  color: #81868a;
+  color: #717679;
   font-size: 16px;
   line-height: 34px;
   letter-spacing: -0.02em;
@@ -473,7 +473,7 @@ a:visited {
   letter-spacing: -0.02em;
   font-size: 16px;
   font-weight: 500;
-  color: #81868a;
+  color: #55595b;
   position: relative;
 }
 .header-navigation ul.navigation-box > li.current > a, .header-navigation ul.navigation-box > li:hover > a {
@@ -2926,7 +2926,7 @@ a:visited {
   font-size: 16px;
   line-height: 34px;
   font-weight: 500;
-  color: #81868a;
+  color: #4e5153;
   margin: 0;
 }
 
@@ -3549,7 +3549,7 @@ a:visited {
   line-height: 1em;
 }
 .course-details__tab-navs li a {
-  color: #81868a;
+  color: #2f3032;
   font-size: 18px;
   font-weight: 500;
   display: block;
@@ -3625,7 +3625,7 @@ a:visited {
   font-size: 16px;
   line-height: 34px;
   font-weight: 500;
-  color: #81868a;
+  color: #55595b;
 }
 .course-details__tab-title {
   font-size: 20px;
@@ -3662,7 +3662,12 @@ a:visited {
       -ms-flex-align: center;
           align-items: center;
 }
-.course-details__curriculum-list-left a, div {
+.course-details__curriculum-list-left a {
+  font-size: 16px;
+  font-weight: 600;
+  color: #012237;
+}
+.treatment-detail-item div {
   font-size: 16px;
   font-weight: 600;
   color: #012237;
@@ -3694,7 +3699,7 @@ a:visited {
   margin: 0;
   font-size: 14px;
   font-weight: 600;
-  color: #81868a;
+  color: #4e5153;
   text-transform: uppercase;
   letter-spacing: .2em;
   line-height: 1em;
@@ -3867,8 +3872,8 @@ a:visited {
 }
 .course-details__list h3 {
   font-size: 16px;
-  font-weight: 600;
-  color: #81868a;
+  font-weight: 500;
+  color: #55595b;
   margin: 0;
   line-height: 1em;
   margin-top: 10px;
@@ -4884,15 +4889,9 @@ a:visited {
 .blog-one__home-two {
   padding-bottom: 90px;
 }
-
 .blog-details {
   padding: 120px 0;
 }
-
-.blog-details p {
-  color: #35383a;
-}
-
 .blog-details .blog-one__single {
   margin-bottom: 0;
 }
@@ -5458,7 +5457,7 @@ a:visited {
   line-height: 1em;
 }
 .sidebar__category-list-item a {
-  color: #7B7F85;
+  color: #4e5154;
   font-size: 16px;
   font-weight: 500;
   display: block;
@@ -5690,7 +5689,7 @@ a:visited {
   margin: 0;
   font-size: 18px;
   line-height: 36px;
-  color: #81868a;
+  color: #55595b;
 }
 .about-two .thm-btn {
   padding: 21.5px 68px;
