--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -297,7 +297,7 @@
   .header-navigation .container .menu-toggler {
     float: left;
     margin: 28px 0;
-    color: #81868a;
+    color: #55595b;
     margin-left: 0px;
     position: relative;
     top: 5px;
