--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -714,7 +714,7 @@ a:visited {
   margin-top: 5px;
 }
 .header__social a {
-  color: #81868a;
+  color: #55595b;
   font-size: 18px;
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
@@ -4892,6 +4892,13 @@ a:visited {
 .blog-details {
   padding: 120px 0;
 }
+.blog-details p {
+  font-size: 16px;
+  line-height: 34px;
+  color: #55595b;
+  font-weight: 500;
+  margin: 0 0 30px
+}
 .blog-details .blog-one__single {
   margin-bottom: 0;
 }
@@ -4956,7 +4963,7 @@ a:visited {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  color: #81868a;
+  color: #55595b;
   font-size: 18px;
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
